[package]
name = "propolis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
embed_migrations = []

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
axum = "0.6.12"
sqlx = { version = "0.6.3", features = ["sqlite", "macros", "runtime-tokio-rustls", "offline"] }
# faster compiles with latest sqlx version
# sqlx = { version = "0.7.0-alpha.2", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.159", features = ["derive"] }
tower-cookies = "0.9.0"
rand = "0.8.5"
timediff = "0.2.3"
chrono = "0.4.24"
qrcode = "0.12.0"
base64 = "0.21.0"
async-trait = "0.1.68"
http = "0.2.9"
mime_guess = "2.0.4"
tower-http = { version = "0.4.0", features = ["fs", "compression-gzip", "trace"] }
maud = { git= "https://github.com/lambda-fairy/maud", features = ["axum"] } # https://github.com/lambda-fairy/maud/issues/366
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
serde_json = "1.0.95"
num-traits = "0.2.15"
num-derive = "0.3.3"
rust-embed = "6.6.1"
anyhow = "1.0.70"

[profile.dev.package.sqlx-macros]
# speed up compile time verification (https://github.com/launchbadge/sqlx#compile-time-verification)
opt-level = 3

[profile.release]
# opt-level = 0
lto = true # link time optimization
