[workspace]

members = [
    "lib/ai_prompt",
    "lib/rl_queue"
]

[package]
name = "propolis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["with_predictions"]
embed_migrations = []
with_predictions = ["dep:ai_prompt"]

[dependencies]
# local deps
ai_prompt = { path = "lib/ai_prompt", optional = true }
rl_queue = { path = "lib/rl_queue" }

# faster compiles with latest sqlx version
# sqlx = { version = "0.7.0-alpha.2", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = "0.6.12"
base64 = "0.21.0"
chrono = "0.4.24"
csv = "1.2.1"
function_name = "0.3.0"
futures = "0.3.28"
http = "0.2.9"
maud = { git= "https://github.com/lambda-fairy/maud", features = ["axum"] } # https://github.com/lambda-fairy/maud/issues/366
mime_guess = "2.0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
qrcode = "0.12.0"
rand = "0.8.5"
rust-embed = "6.6.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["sqlite", "macros", "runtime-tokio-rustls", "offline"] }
timediff = "0.2.3"
tokio = { version = "1.27.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs", "compression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
async-std = "1.12.0"

[profile.dev.package.sqlx-macros]
# speed up compile time verification (https://github.com/launchbadge/sqlx#compile-time-verification)
opt-level = 3

[profile.release]
# opt-level = 0
lto = true # link time optimization
