[workspace]

members = [
    "lib/ai_prompt",
    "lib/rl_queue",
    "lib/db",
    "lib/propolis-datas",
    "lib/propolis-utils"
]

[package]
name = "propolis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["with_predictions"]
embed_migrations = []
with_predictions = ["dep:ai_prompt"]

[workspace.dependencies]
anyhow = "1.0.71"
async-std = "1.12.0"
async-trait = "0.1.68"
db = { path = "lib/db" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "macros", "runtime-tokio-rustls", "offline"] }
tracing = "0.1.37"
tokio = { version = "1.28.0", features = ["full"] }
num-derive = "0.3.3"
num-traits = "0.2.15"

[dependencies]
# local deps
ai_prompt = { path = "lib/ai_prompt", optional = true }
db = { workspace = true }
rl_queue = { path = "lib/rl_queue" }
propolis-datas = { path = "lib/propolis-datas" }
propolis-utils = { path = "lib/propolis-utils" }

anyhow = { workspace = true }
argon2 = "0.5.0"
async-std = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.6.18", features = ["headers", "macros"] }
base64 = "0.21.0"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["env", "derive"] }
csv = "1.2.1"
function_name = "0.3.0"
futures = "0.3.28"
http = "0.2.9"
maud = { version = "0.25.0", features = ["axum"] } # https://github.com/lambda-fairy/maud/issues/366
mime_guess = "2.0.4"
num-derive = { workspace = true }
num-traits = { workspace = true }
qrcode = "0.12.0"
rand = "0.8.5"
rust-embed = "6.6.1"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
timediff = "0.2.3"
tokio = { workspace = true }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs", "compression-gzip", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
aho-corasick = "1.0.1" # search strings for multiple patterns at the same time
once_cell = "1.17.1" # for lazy global variables

[profile.dev.package.sqlx-macros]
# speed up compile time verification (https://github.com/launchbadge/sqlx#compile-time-verification)
opt-level = 3

[profile.release]
# opt-level = 0
lto = true # link time optimization
