[package]
name = "ai_prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
openai = "1.0.0-alpha.8"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
